change figure bed

--- a/source/_posts/1.分布式系统基础.md
+++ b/source/_posts/1.分布式系统基础.md
@@ -17,7 +17,7 @@ ps：所以所有的程序乃至架构的变革都是因为业务的需要，所
 
 ## 分布式系统的演化？
 ### **经典的架构演变图**
-![图片](http://pl5cg4rhb.bkt.clouddn.com/dubbo-architecture-roadmap.jpg)
+![picture](https://raw.githubusercontent.com/cfreedomc/picture/master/img/dubbo-architecture-roadmap.jpg)
 是从单一应用架构-->垂直架构-->分布式架构-->SOA的结果
 
 ### 单一架构
