optimize theme next

--- a/source/_posts/1.JAVA并发编程-1-内存模型.md
+++ b/source/_posts/1.JAVA并发编程-1-内存模型.md
@@ -2,9 +2,10 @@
 title: Java并发编程-1-内存模型
 date: 2018-11-06
 tags: Concurrent
+categories: java
 ---
-![图片](https://i.loli.net/2019/03/05/5c7e92c031bd2.jpg)
->本篇主要介绍了在Java虚拟机中的内存模型的情况以及基本的内存使用流程;
+
+> 本篇主要介绍了在Java虚拟机中的内存模型的情况以及基本的内存使用流程;
 
 <!-- more -->
 
